Helidon 2. Removed GRPC server. Helidon DB client.